# rstdocgen

./: .gitignore  .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
scripts/: csv2yaml.py
src/rstdocgen/: genrstdocs.py  gentestcase.py
src/rstdocgen/data/: genrstdocs.yaml  gentestcase.yaml  rstdocgen.yaml
