[metadata]
name = rstdocgen
version = attr: setuptools_scm.get_version
description = Generate rSt documents from YAML source files
url = https://github.com/sarnold/rstdocgen
author = Stephen Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license: MIT
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Documentation

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    yaml-tools @ https://github.com/sarnold/yaml-tools/releases/download/0.4.2/yaml_tools-0.4.2-py3-none-any.whl
    importlib-metadata; python_version < '3.8'
    rstobj

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
rstdocgen.data =
    *.yaml

[options.entry_points]
console_scripts =
    gen_testcase = rstdocgen.gentestcase:main
    gen_rstdocs = rstdocgen.genrstdocs:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    recommonmark
    sphinx_rtd_theme
    sphinx-autoapi
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 110
